[package]
name = "open_launcher"
version = "1.5.5"
edition = "2021"
authors = ["Natan Chiodi <contact@natanchiodi.fr>"]
description = "Open Launcher is a package to install and launch modded and vanilla Minecraft instances totally automatically with Rust."
readme = "README.md"
license = "MIT"
keywords = ["minecraft", "launcher", "minecraft_launcher"]
homepage = "https://github.com/Natoune/open_launcher_rs#readme"
repository = "https://github.com/Natoune/open_launcher_rs"
documentation = "https://docs.rs/open_launcher"

[lib]
name = "open_launcher"
path = "src/lib.rs"
crate-type = ["lib"]

[[example]]
name = "fabric"
path = "examples/fabric.rs"
required-features = ["tokio/rt-multi-thread", "tokio/macros"]

[[example]]
name = "forge"
path = "examples/forge.rs"
required-features = ["tokio/rt-multi-thread", "tokio/macros"]

[[example]]
name = "legacy_forge"
path = "examples/legacy_forge.rs"
required-features = ["tokio/rt-multi-thread", "tokio/macros"]

[[example]]
name = "neoforge"
path = "examples/neoforge.rs"
required-features = ["tokio/rt-multi-thread", "tokio/macros"]

[[example]]
name = "quilt"
path = "examples/quilt.rs"
required-features = ["tokio/rt-multi-thread", "tokio/macros"]

[[example]]
name = "vanilla"
path = "examples/vanilla.rs"
required-features = ["tokio/rt-multi-thread", "tokio/macros"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.2.2"
async-recursion = "1.1.0"
async_zip = { version = "0.0.17", features = ["full"] }
futures-lite = "2.3.0"
md5 = "0.7.0"
serde_json = "1.0.116"
sha1 = "0.10.6"
tokio = { version = "1.0.1", features = ["io-util", "fs"] }
tokio-util = "0.7.10"
reqwest = { version = "0.12.4", features = ["json"] }
zip = "1.1.1"
